[package]
name = "gdl"
version = "0.1.0"
edition = "2021"
authors = [ "Austin Davis-Richardson <hello@agdr.org>" ]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = "1.0.210"
taxonomy = "0.10.0"
tokio = { version = "1.40.0", features = ["full"] }
