[package]
name = "gdl"
version = "0.0.1"
edition = "2021"
authors = [ "Austin Davis-Richardson <hello@agdr.org>" ]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.34"
futures = "0.3.30"
indicatif = "0.17.8"
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = "1.0.210"
tar = "0.4.42"
taxonomy = "0.10.0"
